link path fixed?

--- a/campaigns/campaign-1/index.html
+++ b/campaigns/campaign-1/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Campaign 1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+    <base href="../../../">
+    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 </head>
 
 <body class="bg-dark text-light">
@@ -36,7 +36,7 @@
                         <p class="small">
                             Explore the gods, cosmic powers, and divine forces shaping reality.
                         </p>
-                        <a href="world/gods.html" class="btn btn-sm btn-outline-warning">View Gods</a>
+                        <a href="campaigns/campaign-1/world/gods.html" class="btn btn-sm btn-outline-warning">View Gods</a>
                     </div>
                 </div>
             </div>
@@ -48,7 +48,7 @@
                         <p class="small">
                             Meet the heroes, villains, and legendary figures of the campaign.
                         </p>
-                        <a href="player-characters" class="btn btn-sm btn-outline-warning">View Characters</a>
+                        <a href="campaigns/campaign-1/player-characters" class="btn btn-sm btn-outline-warning">View Characters</a>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                         <p class="small">
                             Discover locations, nations, ruins, and planes of existence.
                         </p>
-                        <a href="world" class="btn btn-sm btn-outline-warning">Explore World</a>
+                        <a href="campaigns/campaign-1/world" class="btn btn-sm btn-outline-warning">Explore World</a>
                     </div>
                 </div>
             </div>
@@ -116,32 +116,32 @@
                 <div class="d-flex flex-wrap justify-content-center gap-4">
                     <!-- Party Member -->
                     <div class="text-center" style="width: 200px;">
-                        <img src="/assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
-                        <a href="player-characters/CaelAurelin.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Cael Aurelin</h6></a>
+                        <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
+                        <a href="campaigns/campaign-1/player-characters/CaelAurelin.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Cael Aurelin</h6></a>
                         <small>Celestial Warlock • Aasimar</small>
                     </div>
                     <!-- Party Member -->
                     <div class="text-center" style="width: 200px;">
-                        <img src="/assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
-                        <a href="player-characters/KealenSilverwood.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Kealen Silverwood</h6></a>
+                        <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
+                        <a href="campaigns/campaign-1/player-characters/KealenSilverwood.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Kealen Silverwood</h6></a>
                         <small>Druid • Human</small>
                     </div>
                     <!-- Party Member -->
                     <div class="text-center" style="width: 200px;">
-                        <img src="/assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
-                        <a href="player-characters/LargulonGalanodel.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Largulon Galanodel</h6></a>
+                        <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
+                        <a href="campaigns/campaign-1/player-characters/LargulonGalanodel.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Largulon Galanodel</h6></a>
                         <small>Ranger • Elf</small>
                     </div>
                     <!-- Party Member -->
                     <div class="text-center" style="width: 200px;">
-                        <img src="/assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
-                        <a href="player-characters/XaedrielStarstruck.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Xaedriel Starstruck</h6></a>
+                        <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
+                        <a href="campaigns/campaign-1/player-characters/XaedrielStarstruck.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Xaedriel Starstruck</h6></a>
                         <small>Monk • Elf</small>
                     </div>
                     <!-- Party Member -->
                     <div class="text-center" style="width: 200px;">
-                        <img src="/assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
-                        <a href="player-characters/ZerraRunekeeper.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Zerra Runekeeper</h6></a>
+                        <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
+                        <a href="campaigns/campaign-1/player-characters/ZerraRunekeeper.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Zerra Runekeeper</h6></a>
                         <small>Barbarian • Dwarf</small>
                     </div>
                 </div>
@@ -166,9 +166,9 @@
         </div>
     </div>
 </div>
-<script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script>
-    fetch('/nav.html').then(res => res.text()).then(html => {
+    fetch('nav.html').then(res => res.text()).then(html => {
         document.getElementById('navbar').innerHTML = html;
     });
 </script>
