--- a/campaigns/campaign-1/player-characters/index.html
+++ b/campaigns/campaign-1/player-characters/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Player Characters</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+    <base href="../../../../">
+    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 </head>
 
 <body class="bg-dark text-light">
@@ -30,7 +30,7 @@
             <!-- MEMBER CARD -->
             <div class="card bg-black border-warning text-light shadow-sm" style="width: 350px;">
                 <div class="card-body text-center">
-                    <img src="/assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-3" alt="">
+                    <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-3" alt="">
                     <h5 class="text-warning mb-0">Cael Aurelin</h5>
                     <small>Celestial Warlock • Aasimar • Level 4</small>
                     <p class="small mt-3">
@@ -40,14 +40,14 @@
                         <span class="badge bg-warning text-dark">Role</span>
                         <span class="badge bg-warning text-dark">Trait</span>
                     </div>
-                    <a href="CaelAurelin.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
+                    <a href="campaigns/campaign-1/player-characters/CaelAurelin.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
                 </div>
             </div>
 
             <!-- MEMBER CARD -->
             <div class="card bg-black border-warning text-light shadow-sm" style="width: 350px;">
                 <div class="card-body text-center">
-                    <img src="/assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-3" alt="">
+                    <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-3" alt="">
                     <h5 class="text-warning mb-0">Kealen Silverwood</h5>
                     <small>Druid • Human • Level 4</small>
                     <p class="small mt-3">
@@ -57,14 +57,14 @@
                         <span class="badge bg-warning text-dark">Scout</span>
                         <span class="badge bg-warning text-dark">Sharpshooter</span>
                     </div>
-                    <a href="KealenSilverwood.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
+                    <a href="campaigns/campaign-1/player-characters/KealenSilverwood.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
                 </div>
             </div>
 
             <!-- MEMBER CARD -->
             <div class="card bg-black border-warning text-light shadow-sm" style="width: 350px;">
                 <div class="card-body text-center">
-                    <img src="/assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-3" alt="">
+                    <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-3" alt="">
                     <h5 class="text-warning mb-0">Largulon Galanodel</h5>
                     <small>Ranger • Elf • Level 4</small>
                     <p class="small mt-3">
@@ -74,14 +74,14 @@
                         <span class="badge bg-warning text-dark">Frontliner</span>
                         <span class="badge bg-warning text-dark">Berserker</span>
                     </div>
-                    <a href="LargulonGalanodel.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
+                    <a href="campaigns/campaign-1/player-characters/LargulonGalanodel.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
                 </div>
             </div>
 
             <!-- MEMBER CARD -->
             <div class="card bg-black border-warning text-light shadow-sm" style="width: 350px;">
                 <div class="card-body text-center">
-                    <img src="/assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-3" alt="">
+                    <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-3" alt="">
                     <h5 class="text-warning mb-0">Xaedriel Starstruck</h5>
                     <small>Monk • Elf • Level 4</small>
                     <p class="small mt-3">
@@ -91,14 +91,14 @@
                         <span class="badge bg-warning text-dark">Caster</span>
                         <span class="badge bg-warning text-dark">Arcane</span>
                     </div>
-                    <a href="XaedrielStarstruck.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
+                    <a href="campaigns/campaign-1/player-characters/XaedrielStarstruck.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
                 </div>
             </div>
 
             <!-- MEMBER CARD -->
             <div class="card bg-black border-warning text-light shadow-sm" style="width: 350px;">
                 <div class="card-body text-center">
-                    <img src="/assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-3" alt="">
+                    <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-3" alt="">
                     <h5 class="text-warning mb-0">Zerra Runekeeper</h5>
                     <small>Barbarian • Dwarf • Level 4</small>
                     <p class="small mt-3">
@@ -108,7 +108,7 @@
                         <span class="badge bg-warning text-dark">Support</span>
                         <span class="badge bg-warning text-dark">Healer</span>
                     </div>
-                    <a href="ZerraRunekeeper.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
+                    <a href="campaigns/campaign-1/player-characters/ZerraRunekeeper.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
                 </div>
             </div>
         </div>
@@ -146,9 +146,9 @@
         </div>
     </div>
 </div>
-<script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script>
-    fetch('/nav.html').then(res => res.text()).then(html => {
+    fetch('nav.html').then(res => res.text()).then(html => {
         document.getElementById('navbar').innerHTML = html;
     });
 </script>
