--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>D&D Campaign Wiki Hub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+    <base href="../">
+    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 </head>
 
 <body class="bg-dark text-light">
@@ -30,7 +30,7 @@
                     <div class="card-body">
                         <h5 class="text-warning">Campaign 1</h5>
                         <p>War-torn continent struggles beneath the return of an ancient fire god and the fractured kingdoms seeking its power.</p>
-                        <a href="/campaigns/campaign-1" class="text-warning">Enter Campaign →</a>
+                        <a href="campaigns/campaign-1" class="text-warning">Enter Campaign →</a>
                     </div>
                 </div>
             </div>
