--- a/nav.html
+++ b/nav.html
@@ -15,15 +15,15 @@
             <div id="camp1" class="accordion-collapse collapse" data-bs-parent="#campaignNav">
                 <div class="accordion-body">
 
-                    <h6><a href="/campaigns/campaign-1" class="nav-link text-warning ps-2">Overview</a></h6>
+                    <h6><a href="campaigns/campaign-1" class="nav-link text-warning ps-2">Overview</a></h6>
 
                     <div class="text-warning d-block mt-2">Player Characters</div>
-                    <a href="/campaigns/campaign-1/player-characters" class="nav-link text-secondary ps-3">Full Party</a>
-                    <a href="/campaigns/campaign-1/player-characters/CaelAurelin.html" class="nav-link text-secondary ps-3">Cael Aurelin</a>
-                    <a href="/campaigns/campaign-1/player-characters/KealenSilverwood.html" class="nav-link text-secondary ps-3">Kealen Silverwood</a>
-                    <a href="/campaigns/campaign-1/player-characters/LargulonGalanodel.html" class="nav-link text-secondary ps-3">Largulon Galanodel</a>
-                    <a href="/campaigns/campaign-1/player-characters/XaedrielStarstruck.html" class="nav-link text-secondary ps-3">Xaedriel Starstruck</a>
-                    <a href="/campaigns/campaign-1/player-characters/ZerraRunekeeper.html" class="nav-link text-secondary ps-3">Zerra Runekeeper</a>
+                    <a href="campaigns/campaign-1/player-characters" class="nav-link text-secondary ps-3">Full Party</a>
+                    <a href="campaigns/campaign-1/player-characters/CaelAurelin.html" class="nav-link text-secondary ps-3">Cael Aurelin</a>
+                    <a href="campaigns/campaign-1/player-characters/KealenSilverwood.html" class="nav-link text-secondary ps-3">Kealen Silverwood</a>
+                    <a href="campaigns/campaign-1/player-characters/LargulonGalanodel.html" class="nav-link text-secondary ps-3">Largulon Galanodel</a>
+                    <a href="campaigns/campaign-1/player-characters/XaedrielStarstruck.html" class="nav-link text-secondary ps-3">Xaedriel Starstruck</a>
+                    <a href="campaigns/campaign-1/player-characters/ZerraRunekeeper.html" class="nav-link text-secondary ps-3">Zerra Runekeeper</a>
 
 <!--                    <div class="text-warning d-block mt-2">World</div>-->
 <!--                    <a href="/campaigns/campaign-1/world" class="nav-link text-secondary ps-3">World Index</a>-->
