--- a/campaigns/campaign-1/player-characters/LargulonGalanodel.html
+++ b/campaigns/campaign-1/player-characters/LargulonGalanodel.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Largulon Galanodel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+    <base href="../../../../">
+    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 </head>
 
 <body class="bg-dark text-light">
@@ -19,7 +19,7 @@
             <!-- Character Header -->
             <div class="row mb-4">
                 <div class="col-md-3 text-center">
-                    <img src="/assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-secondary mb-2" alt="">
+                    <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-secondary mb-2" alt="">
                     <span class="badge bg-warning text-dark mt-2">Largulon Galanodel</span>
                 </div>
 
@@ -128,9 +128,9 @@
         </div>
     </div>
 </div>
-<script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script>
-    fetch('/nav.html').then(res => res.text()).then(html => {
+    fetch('nav.html').then(res => res.text()).then(html => {
         document.getElementById('navbar').innerHTML = html;
     });
 </script>
