--- a/shared/house-rules.html
+++ b/shared/house-rules.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+    <base href="../../">
+    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 </head>
 
 <body class="bg-dark text-light">
@@ -22,9 +22,9 @@
 
     </div>
 </div>
-<script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script>
-    fetch('/nav.html').then(res => res.text()).then(html => {
+    fetch('nav.html').then(res => res.text()).then(html => {
         document.getElementById('navbar').innerHTML = html;
     });
 </script>
