link fix? (again)

--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,6 @@
 <nav id="sidebar" class="bg-dark text-light p-3 vh-100 border-end border-secondary position-sticky top-0 overflow-auto">
 
-    <a href="/" class="text-warning mb-3 link-underline link-underline-opacity-0"><h5>Campaign Archives</h5></a>
+    <a href="./" class="text-warning mb-3 link-underline link-underline-opacity-0"><h5>Campaign Archives</h5></a>
 
     <div class="accordion accordion-flush" id="campaignNav">
 
