--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>D&D Campaign Wiki Hub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="../">
+    <base href="./">
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 </head>
@@ -102,9 +102,9 @@
     </div>
 </div>
 
-<script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script>
-    fetch('/nav.html').then(res => res.text()).then(html => {
+    fetch('nav.html').then(res => res.text()).then(html => {
         document.getElementById('navbar').innerHTML = html;
     });
 </script>
