--- a/shared/house-rules.html
+++ b/shared/house-rules.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="../../">
+    <base href="./../">
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 </head>
