--- a/campaigns/campaign-1/index.html
+++ b/campaigns/campaign-1/index.html
@@ -85,7 +85,7 @@
                 <div class="card bg-black border-warning text-light shadow-sm h-100">
                     <div class="card-header text-warning">Current Story Arc</div>
                     <div class="card-body">
-                        <h5 class="text-warning">Unclear Beginnings</h5>
+                        <h5 class="text-warning">Unknown Beginnings</h5>
                         <p>
                             The party discovers the world and what happened to them
                         </p>
