--- a/campaigns/campaign-1/index.html
+++ b/campaigns/campaign-1/index.html
@@ -36,7 +36,7 @@
                         <p class="small">
                             Explore the gods, cosmic powers, and divine forces shaping reality.
                         </p>
-                        <a href="campaigns/campaign-1/world/gods.html" class="btn btn-sm btn-outline-warning">View Gods</a>
+                        <a href="campaigns/campaign-1/world/gods" class="btn btn-sm btn-outline-warning">View Gods</a>
                     </div>
                 </div>
             </div>
@@ -117,31 +117,31 @@
                     <!-- Party Member -->
                     <div class="text-center" style="width: 200px;">
                         <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
-                        <a href="campaigns/campaign-1/player-characters/CaelAurelin.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Cael Aurelin</h6></a>
+                        <a href="campaigns/campaign-1/player-characters/CaelAurelin" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Cael Aurelin</h6></a>
                         <small>Celestial Warlock • Aasimar</small>
                     </div>
                     <!-- Party Member -->
                     <div class="text-center" style="width: 200px;">
                         <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
-                        <a href="campaigns/campaign-1/player-characters/KealenSilverwood.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Kealen Silverwood</h6></a>
+                        <a href="campaigns/campaign-1/player-characters/KealenSilverwood" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Kealen Silverwood</h6></a>
                         <small>Druid • Human</small>
                     </div>
                     <!-- Party Member -->
                     <div class="text-center" style="width: 200px;">
                         <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
-                        <a href="campaigns/campaign-1/player-characters/LargulonGalanodel.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Largulon Galanodel</h6></a>
+                        <a href="campaigns/campaign-1/player-characters/LargulonGalanodel" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Largulon Galanodel</h6></a>
                         <small>Ranger • Elf</small>
                     </div>
                     <!-- Party Member -->
                     <div class="text-center" style="width: 200px;">
                         <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
-                        <a href="campaigns/campaign-1/player-characters/XaedrielStarstruck.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Xaedriel Starstruck</h6></a>
+                        <a href="campaigns/campaign-1/player-characters/XaedrielStarstruck" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Xaedriel Starstruck</h6></a>
                         <small>Monk • Elf</small>
                     </div>
                     <!-- Party Member -->
                     <div class="text-center" style="width: 200px;">
                         <img src="assets/img/110-1102775_download-empty-profile-hd-png-download.png" class="img-fluid rounded shadow border border-warning mb-2" alt="">
-                        <a href="campaigns/campaign-1/player-characters/ZerraRunekeeper.html" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Zerra Runekeeper</h6></a>
+                        <a href="campaigns/campaign-1/player-characters/ZerraRunekeeper" class="link-underline link-underline-opacity-0"><h6 class="text-warning mb-0">Zerra Runekeeper</h6></a>
                         <small>Barbarian • Dwarf</small>
                     </div>
                 </div>
