--- a/campaigns/campaign-1/player-characters/index.html
+++ b/campaigns/campaign-1/player-characters/index.html
@@ -40,7 +40,7 @@
                         <span class="badge bg-warning text-dark">Role</span>
                         <span class="badge bg-warning text-dark">Trait</span>
                     </div>
-                    <a href="campaigns/campaign-1/player-characters/CaelAurelin.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
+                    <a href="campaigns/campaign-1/player-characters/CaelAurelin" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
                 </div>
             </div>
 
@@ -57,7 +57,7 @@
                         <span class="badge bg-warning text-dark">Scout</span>
                         <span class="badge bg-warning text-dark">Sharpshooter</span>
                     </div>
-                    <a href="campaigns/campaign-1/player-characters/KealenSilverwood.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
+                    <a href="campaigns/campaign-1/player-characters/KealenSilverwood" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
                 </div>
             </div>
 
@@ -74,7 +74,7 @@
                         <span class="badge bg-warning text-dark">Frontliner</span>
                         <span class="badge bg-warning text-dark">Berserker</span>
                     </div>
-                    <a href="campaigns/campaign-1/player-characters/LargulonGalanodel.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
+                    <a href="campaigns/campaign-1/player-characters/LargulonGalanodel" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
                 </div>
             </div>
 
@@ -91,7 +91,7 @@
                         <span class="badge bg-warning text-dark">Caster</span>
                         <span class="badge bg-warning text-dark">Arcane</span>
                     </div>
-                    <a href="campaigns/campaign-1/player-characters/XaedrielStarstruck.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
+                    <a href="campaigns/campaign-1/player-characters/XaedrielStarstruck" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
                 </div>
             </div>
 
@@ -108,7 +108,7 @@
                         <span class="badge bg-warning text-dark">Support</span>
                         <span class="badge bg-warning text-dark">Healer</span>
                     </div>
-                    <a href="campaigns/campaign-1/player-characters/ZerraRunekeeper.html" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
+                    <a href="campaigns/campaign-1/player-characters/ZerraRunekeeper" class="btn btn-sm btn-outline-warning mt-3">View Profile</a>
                 </div>
             </div>
         </div>
