--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <!--                    <div class="card-body">-->
 <!--                        <h5 class="text-warning">Echoes of the Deep</h5>-->
 <!--                        <p>Seafaring intrigue, eldritch secrets, and lost civilizations buried beneath the waves.</p>-->
-<!--                        <a href="campaigns/echoes-deep/index.html" class="text-warning">Enter Campaign →</a>-->
+<!--                        <a href="campaigns/echoes-deep" class="text-warning">Enter Campaign →</a>-->
 <!--                    </div>-->
 <!--                </div>-->
 <!--            </div>-->
@@ -56,7 +56,7 @@
 <!--                    <div class="card-body">-->
 <!--                        <h5 class="text-warning">Curse of Blackspire</h5>-->
 <!--                        <p>Gothic horror tale of curses, betrayal, and the price of forbidden magic.</p>-->
-<!--                        <a href="campaigns/blackspire/index.html" class="text-warning">View Archive →</a>-->
+<!--                        <a href="campaigns/blackspire" class="text-warning">View Archive →</a>-->
 <!--                    </div>-->
 <!--                </div>-->
 <!--            </div>-->
@@ -86,7 +86,7 @@
                 <div class="card bg-black border-warning text-light h-100 p-3">
                     <h6 class="text-warning">House Rules</h6>
                     <p class="text-secondary small">Custom mechanics</p>
-                    <a href="shared/house-rules.html" class="text-warning">View →</a>
+                    <a href="shared/house-rules" class="text-warning">View →</a>
                 </div>
             </div>
 
