--- a/nav.html
+++ b/nav.html
@@ -19,15 +19,15 @@
 
                     <div class="text-warning d-block mt-2">Player Characters</div>
                     <a href="campaigns/campaign-1/player-characters" class="nav-link text-secondary ps-3">Full Party</a>
-                    <a href="campaigns/campaign-1/player-characters/CaelAurelin.html" class="nav-link text-secondary ps-3">Cael Aurelin</a>
-                    <a href="campaigns/campaign-1/player-characters/KealenSilverwood.html" class="nav-link text-secondary ps-3">Kealen Silverwood</a>
-                    <a href="campaigns/campaign-1/player-characters/LargulonGalanodel.html" class="nav-link text-secondary ps-3">Largulon Galanodel</a>
-                    <a href="campaigns/campaign-1/player-characters/XaedrielStarstruck.html" class="nav-link text-secondary ps-3">Xaedriel Starstruck</a>
-                    <a href="campaigns/campaign-1/player-characters/ZerraRunekeeper.html" class="nav-link text-secondary ps-3">Zerra Runekeeper</a>
+                    <a href="campaigns/campaign-1/player-characters/CaelAurelin" class="nav-link text-secondary ps-3">Cael Aurelin</a>
+                    <a href="campaigns/campaign-1/player-characters/KealenSilverwood" class="nav-link text-secondary ps-3">Kealen Silverwood</a>
+                    <a href="campaigns/campaign-1/player-characters/LargulonGalanodel" class="nav-link text-secondary ps-3">Largulon Galanodel</a>
+                    <a href="campaigns/campaign-1/player-characters/XaedrielStarstruck" class="nav-link text-secondary ps-3">Xaedriel Starstruck</a>
+                    <a href="campaigns/campaign-1/player-characters/ZerraRunekeeper" class="nav-link text-secondary ps-3">Zerra Runekeeper</a>
 
 <!--                    <div class="text-warning d-block mt-2">World</div>-->
 <!--                    <a href="/campaigns/campaign-1/world" class="nav-link text-secondary ps-3">World Index</a>-->
-<!--                    <a href="/campaigns/campaign-1/world/gods.html" class="nav-link text-secondary ps-3">Pantheon</a>-->
+<!--                    <a href="/campaigns/campaign-1/world/gods" class="nav-link text-secondary ps-3">Pantheon</a>-->
                 </div>
             </div>
         </div>
