--- a/nav.html
+++ b/nav.html
@@ -25,9 +25,9 @@
                     <a href="campaigns/campaign-1/player-characters/XaedrielStarstruck" class="nav-link text-secondary ps-3">Xaedriel Starstruck</a>
                     <a href="campaigns/campaign-1/player-characters/ZerraRunekeeper" class="nav-link text-secondary ps-3">Zerra Runekeeper</a>
 
-<!--                    <div class="text-warning d-block mt-2">World</div>-->
-<!--                    <a href="/campaigns/campaign-1/world" class="nav-link text-secondary ps-3">World Index</a>-->
-<!--                    <a href="/campaigns/campaign-1/world/gods" class="nav-link text-secondary ps-3">Pantheon</a>-->
+                    <div class="text-warning d-block mt-2">World</div>
+                    <a href="/campaigns/campaign-1/world" class="nav-link text-secondary ps-3">World Overview</a>
+                    <a href="/campaigns/campaign-1/world/gods" class="nav-link text-secondary ps-3">Pantheon</a>
                 </div>
             </div>
         </div>
