--- a/campaigns/campaign-1/world/gods.html
+++ b/campaigns/campaign-1/world/gods.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The Pantheon of the Three Realms</title>
+    <title>The Pantheon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="./../../../">
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
